[package]
name = "sc4d-lex-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "*"
chrono = { version = "*", features = ["serde"] }
futures = "*"
itertools = "*"
lettre = { version = "*", features = [
    "tokio1",
    "smtp-transport",
    "builder",
], default-features = false }
log = "*"
md5 = "*"
mysql_async = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
simple-logging = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
warp = "*"
